# CodeReviewBench

./: Welcome.py  agg.json  api.py  benchmark_cli.py  infinite_cycle.py  pyproject.toml  requirements.txt  run_bench.sh  samples.jsonl  test.ipynb
configs/: generation_config.py  model_config.py
pages/: 1_Configuration.py  2_Observation.py  3_Examples.py
src/judge/: base_judge.py  exact_match_judge.py  multimetric_judge.py
src/metrics/: ChrF.py  base_metric.py  bleu.py  compute_metrics.py  exact_match.py  llm_based_exact_match.py  multi_metric.py
src/models/: __init__.py  base_model.py  openai_model.py  vllm_model.py
src/prompts/: exact_match_prompt.py  generation_prompt.py  multimetric_prompt.py
src/ru_code_reviewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/strategies/: __init__.py  base_strategy.py  default_strategy.py
src/utils/: load_data.py  predictions_parser.py
