[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ru-code-reviewer"
version = "0.1.0"
description = "LLM-powered code review assistant and evaluation framework"
authors = [
  { name = "ruCodeReviewer Team", email = "team@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Runtime dependencies copied from requirements.txt
# Keeping the version specifiers identical to maintain consistency.
dependencies = [
  "streamlit>=1.28.0",
  "pandas>=1.5.0",
  "openai>=1.0.0",
  "vllm>=0.9.1",
  "tenacity>=8.0.0",
  "tqdm>=4.64.0",
  "sacrebleu>=2.3.0",
  "evaluate>=0.4.0",
  "pydantic>=2.0.0"
]

[tool.setuptools]
# We use a classic "src" layout.  Tell setuptools where to find the packages.
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"] 